[gd_scene load_steps=10 format=3 uid="uid://cg60ugredi103"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_fsimf"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://assets/icons/Edit.svg" id="2_31l28"]
[ext_resource type="Script" path="res://components/ComponentMethodPicker/ComponentMethodPicker.gd" id="2_nh1rv"]
[ext_resource type="Texture2D" uid="uid://bi4ttx5uklwl7" path="res://assets/icons/Check.svg" id="3_hdv2q"]
[ext_resource type="Texture2D" uid="uid://b3hmh5jlggqxa" path="res://assets/icons/cross.svg" id="4_h27m0"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="5_54dlw"]

[sub_resource type="FontVariation" id="FontVariation_vk08i"]
variation_embolden = 0.82

[sub_resource type="LabelSettings" id="LabelSettings_axtyc"]
font = SubResource("FontVariation_vk08i")

[sub_resource type="LabelSettings" id="LabelSettings_hwsu5"]
font_color = Color(0.804743, 0.804743, 0.804743, 1)

[node name="ComponentMethodPicker" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 814.0
offset_bottom = -541.0
grow_vertical = 2
pivot_offset = Vector2(-1270, -221)
theme = ExtResource("1_fsimf")
script = ExtResource("2_nh1rv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Object:"

[node name="CurrentObject" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_axtyc")

[node name="ChangeObject" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_31l28")

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Confim"
icon = ExtResource("3_hdv2q")

[node name="Cancel" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"
icon = ExtResource("4_h27m0")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
split_offset = -135

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Choose a Method:"

[node name="MethodList" type="ItemList" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RemoveBinding" type="Button" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Remove Binding"
icon = ExtResource("5_54dlw")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2/PanelContainer2"]
layout_mode = 2
text = "Edit Parameters:"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2/PanelContainer3"]
layout_mode = 2

[node name="SelectToEdit" type="Label" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Select a method to edit parameters"
label_settings = SubResource("LabelSettings_hwsu5")

[node name="HasNoArgs" type="Label" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Selected method has no parameters"
label_settings = SubResource("LabelSettings_hwsu5")

[node name="SelectAnObject" type="Label" parent="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Select an object to view methods"
label_settings = SubResource("LabelSettings_hwsu5")

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/ChangeObject" to="." method="_on_change_object_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer/MethodList" to="." method="_on_method_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HSplitContainer/VBoxContainer/RemoveBinding" to="." method="_on_remove_binding_pressed"]
